Fix a bug that thread terminated unexpectedly when closing